<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:isScrollContainer="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scrollbars="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_mobno"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_alignParentTop="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_mobno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobno"
                android:background="@drawable/edittextbg"
                android:textColor="@color/black"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tl_mobno"
        android:weightSum="3"
        android:layout_margin="10dp"
        android:id="@+id/linear">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_operator"
            android:entries="@array/title"
            android:layout_gravity="center"
            android:padding="5dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_fname"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1.5">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fname"
                android:background="@drawable/edittextbg"
                android:textColor="@color/black"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_lname"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_marginStart="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lname"
                android:background="@drawable/edittextbg"
                android:textColor="@color/black"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_beneficiarydet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beneficiarydetails"
        android:layout_below="@id/linear"
        android:layout_margin="10dp"
        android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_bname"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_below="@+id/tv_beneficiarydet">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_bname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:background="@drawable/edittextbg"
                android:textColor="@color/black"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_bmobno"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_below="@id/tl_bname">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_bmobno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobno"
                android:background="@drawable/edittextbg"
                android:textColor="@color/black"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_baccno"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_below="@id/tl_bmobno">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_baccno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/accno"
                android:background="@drawable/edittextbg"
                android:textColor="@color/black"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/linearifsc"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_baccno"
        android:weightSum="2"
        android:layout_margin="10dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_bifsc"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_bifsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ifsc"
                android:background="@drawable/edittextbg"
                android:textColor="@color/black"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_weight="1"
            android:id="@+id/btn_verifyifsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            tools:ignore="MissingConstraints"
            android:background="@drawable/rippleeffect"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_bbname"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_below="@id/linearifsc">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_bbankname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bankname"
                android:background="@drawable/edittextbg"
                android:textColor="@color/black"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_bamount"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_below="@id/tl_bbname">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_bamount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:background="@drawable/edittextbg"
                android:textColor="@color/black"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/activemobilerechargebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:visibility="visible"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                tools:ignore="MissingConstraints"
                android:background="@drawable/rippleeffect"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_reset"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                tools:ignore="MissingConstraints"
                android:background="@drawable/rippleeffect"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:layout_marginStart="10dp" />
        </LinearLayout>
    </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>