<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rdGroup"
            android:layout_alignParentTop="true"
            android:weightSum="2"
            android:checkedButton="@id/rb_prepaid"
            android:layout_marginTop="10dp">
            <RadioButton
                android:id="@+id/rb_prepaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/prepaid"
                android:layout_marginStart="20dp"
                android:buttonTint="@color/throughoutcolor" />
            <RadioButton
                android:id="@+id/rb_postpaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/postpaid"
                android:layout_marginStart="30dp"/>
           </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/rdGroup"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_mobno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobno"
                    android:background="@drawable/edittextbg"
                    android:textColor="@color/black"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_operator"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_margin="10dp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_circle"
                android:layout_marginTop="10dp"
                android:entries="@array/circlecode"
                android:padding="10dp"
                android:layout_margin="10dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount"
                    android:background="@drawable/edittextbg"
                    android:inputType="number"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/activemobilerechargebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:weightSum="2"
            android:visibility="visible"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_recharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recharge"
                tools:ignore="MissingConstraints"
                android:background="@drawable/rippleeffect"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_viewoffer"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewoffer"
                tools:ignore="MissingConstraints"
                android:background="@drawable/rippleeffect"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:layout_marginStart="10dp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>